# polyglot-bench

./: .gitignore  BENCHMARK_ANALYSIS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CPP_INTEGRATION_SUMMARY.md  CPP_SETUP_GUIDE.md  DNS_LOOKUP_OPTIMIZATIONS.md  FIXES_SUMMARY.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  JSON_PARSING_OPTIMIZATIONS.md  LIBRARIES.md  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ISSUES_TRACKING.md  PERFORMANCE_OPTIMIZATIONS.md  PING_TEST_OPTIMIZATIONS.md  QWEN.md  README.md  bench.config.json  bench_orchestrator.py  compile_cpp.bat  package-lock.json  package.json  requirements.txt  test.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.qoder/quests/: benchmark-compilation-fix.md  benchmark-error-fix.md  benchmark-orchestrator-fix.md  benchmark-orchestrator.md  benchmark-results.md  benchmark-testsjs.md  benchmark-troubleshooting.md  multi-lang-perf-bench.md  multi-language-benchmark.md
scripts/: cleanup.py
src/: __init__.py
src/orchestrator/: __init__.py  core.py  metrics.py  models.py  reports.py  results.py  runners.py
src/utils/: __init__.py  config.py  data_generator.py  validation.py
tests/network_operations/http_request/: Cargo.toml  go.mod  http_request.cpp  http_request.go  http_request.py  http_request.rs  http_request.ts  input.json
tests/system_tests/memory_allocation/: Cargo.toml  go.mod  input.json  memory_allocation.cpp  memory_allocation.go  memory_allocation.py  memory_allocation.rs  memory_allocation.ts  package.json  tsconfig.json
tests/unit/: test_config.py  (+2 more)
(+127 files in other folders)
