[package]
name = "http_request"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_request"
path = "http_request.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }