[package]
name = "memory_allocation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memory_allocation"
path = "memory_allocation.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"